V0.4.4.3 - Fixed node connections being drawn off center on application load and when first switching to a program. - Fixed initial program not being drawn when application loaded. - Fixed SQLite.exe not being included correctly. - Fixed excessive database updates when loading DataTableNode data causing slow performance. - Fixed DataTableNode values being lost when adding and updating a new row then adding another new row. - Fixed DataTableNode import missing first row of data. - Fixed application failing to start if no database existed or no default program was selected.